# classroom_auto

./: CMakeLists.txt  Makefile  README.md
